k8s/ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: "ingress.fullcycle.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/admin"
        backend:
          service:
            name: goserver-service
            port: 
              number: 80
  tls:
    - hosts:
      - "ingress.fullcycle.com.br"
      secretName: letsencrypt-tls
